--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.10.0",
     "flowbite": "^3.1.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.3",
     "react-simple-typewriter": "^5.0.1",
     "sonner": "^2.0.6",
